--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#about">about</a>
-            <a href="#products">students</a>
-            <a href="#review">employees</a>
+            <a href="#menu">menu</a>
+            <a href="#review">review</a>
             <a href="#contact">contact</a>
+            <a href="#blogs">blogs</a>
         </nav>
 
         <div class="icons">
@@ -43,42 +44,6 @@
             <input type="search" id="search-box" placeholder="search here...">
             <label for="search-box" class="fas fa-search"></label>
         </div>
-<!-- 
-        <div class="cart-items-container">
-            <div class="cart-item">
-                <span class="fas fa-times"></span>
-                <img src="images/cart-item-1.png" alt="">
-                <div class="content">
-                    <h3>Cappuccino</h3>
-                    <div class="price">₹300.99/-</div>
-                </div>
-            </div>
-            <div class="cart-item">
-                <span class="fas fa-times"></span>
-                <img src="images/cart-item-2.png" alt="">
-                <div class="content">
-                    <h3>Robusta</h3>
-                    <div class="price">₹1500.99/-</div>
-                </div>
-            </div>
-            <div class="cart-item">
-                <span class="fas fa-times"></span>
-                <img src="images/cart-item-3.png" alt="">
-                <div class="content">
-                    <h3>Irish</h3>
-                    <div class="price">₹200.99/-</div>
-                </div>
-            </div>
-            <div class="cart-item">
-                <span class="fas fa-times"></span>
-                <img src="images/cart-item-4.png" alt="">
-                <div class="content">
-                    <h3>Affogato</h3>
-                    <div class="price">₹150.99/-</div>
-                </div>
-            </div>
-            <a href="#" class="btn">checkout now</a>
-        </div> -->
 
     </header>
 
@@ -89,14 +54,12 @@
     <section class="home" id="home">
 
         <div class="content">
-            <h3>Shine in the morning</h3>
-            <p> With YK Cafe's Coffee.</p>
+            <h3>Shine of every word for our future :)</h3>
+            <p> With Library Wings..</p>
             <a href="#menu" class="btn">get yours now</a>
         </div>
 
     </section>
-
-    <!-- home section ends -->
 
     <!-- about section starts  -->
 
@@ -107,7 +70,7 @@
         <div class="row">
 
             <div class="image">
-                <img src="images/about.jpg" alt="">
+                <img src="images/about_lib.jpg" alt="">
             </div>
 
             <div class="content">
@@ -122,162 +85,8 @@
 
     </section>
 
-    <!-- about section ends -->
-
-    <!-- menu section starts  -->
-<!-- 
-    <section class="menu" id="menu">
-
-        <h1 class="heading"> our <span>menu</span> </h1>
-
-        <div class="box-container">
-
-            <div class="box">
-                <img src="images/menu-1.png" alt="">
-                <h3>Cappuccino</h3>
-                <div class="price">₹300.99 <span>310.99</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-
-            <div class="box">
-                <img src="images/menu-2.png" alt="">
-                <h3>Espresso</h3>
-                <div class="price">₹160.99 <span>190.99</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-
-            <div class="box">
-                <img src="images/menu-3.png" alt="">
-                <h3>Mocha</h3>
-                <div class="price">₹165.99 <span>185.99</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-
-            <div class="box">
-                <img src="images/menu-4.png" alt="">
-                <h3>Affogato</h3>
-                <div class="price">₹150.99 <span>200.99</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-
-            <div class="box">
-                <img src="images/menu-5.png" alt="">
-                <h3>Irish</h3>
-                <div class="price">₹200.99 <span>220.99</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-
-            <div class="box">
-                <img src="images/menu-6.png" alt="">
-                <h3>Flat White</h3>
-                <div class="price">₹105.99 <span>150.99</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-
-        </div>
-
-    </section> -->
-
-    <!-- menu section ends -->
-<!-- 
-    <section class="products" id="products">
-
-        <h1 class="heading"> our <span>products</span> </h1>
-
-        <div class="box-container">
-
-            <div class="box">
-                <div class="icons">
-                    <a href="#" class="fas fa-shopping-cart"></a>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>
-                </div>
-                <div class="image">
-                    <img src="images/product-1.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>Arabica</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">₹3000.99 <span>₹3200.99</span></div>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="icons">
-                    <a href="#" class="fas fa-shopping-cart"></a>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>
-                </div>
-                <div class="image">
-                    <img src="images/product-2.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>Robusta</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">₹1500.99 <span>₹1520.99</span></div>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="icons">
-                    <a href="#" class="fas fa-shopping-cart"></a>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>
-                </div>
-                <div class="image">
-                    <img src="images/product-3.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>Liberica</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">₹1050.99 <span>₹1150.99</span></div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="icons">
-                    <a href="#" class="fas fa-shopping-cart"></a>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>
-                </div>
-                <div class="image">
-                    <img src="images/product-4.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>Excelsa</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">₹1120.99 <span>₹1250.99</span></div>
-                </div>
-            </div>
-        </div>
-
-    </section> -->
-
-    <!-- review section starts  -->
-<!-- 
+<!-- review section starts  -->
+ 
     <section class="review" id="review">
 
         <h1 class="heading"> customer's <span>review</span> </h1>
@@ -286,8 +95,8 @@
 
             <div class="box">
                 <img src="images/quote-img.png" alt="" class="quote">
-                <p>Good service, the employees are good. Fast service and the environment are really clean and tidy. And I also appreciate the fact that they use paper straws to support the environment.</p>
-                <img src="images/pic-1.png" class="user" alt="">
+                <p>I was very pleased with the environment. Way to go library every evening. It really is extremely essential to my education. Thank you. </p>
+                <img src="images/pic1.jpg" class="user" alt="">
                 <h3>Kevin Patel</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -300,8 +109,8 @@
 
             <div class="box">
                 <img src="images/quote-img.png" alt="" class="quote">
-                <p>Incredible experience every time. This is truly a great customer service staff. I am more than grateful. I will be trying to do better in regards to recycling. Thank you YK Cafe's team 100%.</p>
-                <img src="images/pic-2.png" class="user" alt="">
+                <p>Incredible experience every time. I am more than grateful. It's always the first place I go when I need to study. Thank you Library Wings.</p>
+                <img src="images/pic2.jpg" class="user" alt="">
                 <h3>Mukti Peter</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -314,8 +123,8 @@
 
             <div class="box">
                 <img src="images/quote-img.png" alt="" class="quote">
-                <p>YK Cafe is lovely place for drinking coffee. They have really good taste coffee. I would certainly advise people to attend YK Cafe once in case they have never been here before.</p>
-                <img src="images/pic-3.png" class="user" alt="">
+                <p>The Library has several shining books like stars that's - helpful and knowledgeable, with a love for books and learning. thank you wings.</p>
+                <img src="images/pic3.jpg" class="user" alt="">
                 <h3>Karim Trivedi</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -328,11 +137,11 @@
 
         </div>
 
-    </section> -->
+    </section> 
 
     <!-- review section ends -->
 
-    <!-- contact section starts  -->
+    <!-- contact section starts -->
 
     <section class="contact" id="contact">
 
@@ -364,56 +173,59 @@
 
         </div>
 
-    </section>
+    </section> 
 
     <!-- contact section ends -->
 
-    <!-- branches section starts  -->
-<!-- 
-    <section class="branches" id="branches">
+    <!-- blogs section starts  -->
 
-        <h1 class="heading"> our <span>branches</span> </h1>
+<section class="blogs" id="blogs">
 
-        <div class="box-container">
+    <h1 class="heading"> our <span>blogs</span> </h1>
 
-            <div class="box">
-                <div class="image">
-                    <img src="images/blog-1.jpeg" alt="">
-                </div>
-                <div class="content">
-                    <a href="#" class="title">Ahmedabad</a>
-                    <span>since 1992</span>
-                    <p>Shop no. 37/1,karnavati plazza, 1st Stage 80 Ft Road, Next To Highway, Ahmedabad, 102030</p>
-                </div>
+    <div class="box-container">
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog1.jpg" alt="">
             </div>
-
-            <div class="box">
-                <div class="image">
-                    <img src="images/blog-2.jpeg" alt="">
-                </div>
-                <div class="content">
-                    <a href="#" class="title">Gandhinagar</a>
-                    <span>since 2005</span>
-                    <p>sector 16, Iv, Sdf Building, Seepz, Gandhinagar, 708090.</p>
-                </div>
+            <div class="content">
+                <a href="#" class="title">tasty and refreshing coffee</a>
+                <span>by admin / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <a href="#" class="btn">read more</a>
             </div>
-
-            <div class="box">
-                <div class="image">
-                    <img src="images/blog-3.jpeg" alt="">
-                </div>
-                <div class="content">
-                    <a href="#" class="title">Mumbai</a>
-                    <span>since 2009</span>
-                    <p>3, Sainath Bldg., Mahul Road, F.c.i.mumbai, Chembur (east), 405060</p>
-                </div>
-            </div>
-
         </div>
 
-    </section> -->
+        <div class="box">
+            <div class="image">
+                <img src="images/blog2.jpg" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">tasty and refreshing coffee</a>
+                <span>by admin / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
 
-    <!-- branches section ends -->
+        <div class="box">
+            <div class="image">
+                <img src="images/blog3.jpg" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">tasty and refreshing coffee</a>
+                <span>by admin / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- blogs section ends -->
 
     <!-- footer section starts  -->
 
