--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <a href="#about">about</a>
             <a href="#menu">menu</a>
             <a href="#review">review</a>
-            <a href="#contact">contact</a>
             <a href="#blogs">blogs</a>
+            <a href="#contact">contact</a>
+
         </nav>
 
         <div class="icons">
@@ -56,7 +57,7 @@
         <div class="content">
             <h3>Shine of every word for our future :)</h3>
             <p> With Library Wings..</p>
-            <a href="#menu" class="btn">get yours now</a>
+            <a href="https://www.google.com/search?q=library+images&oq=&aqs=chrome.4.35i39i362l8.470326j1j7&sourceid=chrome&ie=UTF-8" class="btn">Know more</a>
         </div>
 
     </section>
@@ -89,7 +90,7 @@
  
     <section class="review" id="review">
 
-        <h1 class="heading"> customer's <span>review</span> </h1>
+        <h1 class="heading"> Student's <span>review</span> </h1>
 
         <div class="box-container">
 
@@ -141,6 +142,56 @@
 
     <!-- review section ends -->
 
+    <!-- blogs section starts  -->
+
+<section class="blogs" id="blogs">
+
+    <h1 class="heading"> our <span>blogs</span> </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog4.jpg" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">tasty and refreshing coffee</a>
+                <span>by admin / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog1.jpg" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">tasty and refreshing coffee</a>
+                <span>by admin / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog2.jpg" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">tasty and refreshing coffee</a>
+                <span>by admin / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- blogs section ends -->
+
     <!-- contact section starts -->
 
     <section class="contact" id="contact">
@@ -176,56 +227,6 @@
     </section> 
 
     <!-- contact section ends -->
-
-    <!-- blogs section starts  -->
-
-<section class="blogs" id="blogs">
-
-    <h1 class="heading"> our <span>blogs</span> </h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <div class="image">
-                <img src="images/blog1.jpg" alt="">
-            </div>
-            <div class="content">
-                <a href="#" class="title">tasty and refreshing coffee</a>
-                <span>by admin / 21st may, 2021</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
-                <a href="#" class="btn">read more</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <img src="images/blog2.jpg" alt="">
-            </div>
-            <div class="content">
-                <a href="#" class="title">tasty and refreshing coffee</a>
-                <span>by admin / 21st may, 2021</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
-                <a href="#" class="btn">read more</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <img src="images/blog3.jpg" alt="">
-            </div>
-            <div class="content">
-                <a href="#" class="title">tasty and refreshing coffee</a>
-                <span>by admin / 21st may, 2021</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
-                <a href="#" class="btn">read more</a>
-            </div>
-        </div>
-
-    </div>
-
-</section>
-
-<!-- blogs section ends -->
 
     <!-- footer section starts  -->
 
