--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p>
                     Our Library Wings is a place where books and sources of information are stored. They make it easier for people to get access to them for various purposes. Libraries are very helpful and economical too. They include books, magazines, newspapers, DVDs, manuscripts and more.</p>
                 <p>"The only thing that you absolutely have to know, is the location of the library."</p>
-                <a href="#" class="btn">learn more</a>
+                <a href="https://www.google.com/search?q=library+images&oq=&aqs=chrome.4.35i39i362l8.470326j1j7&sourceid=chrome&ie=UTF-8" class="btn">learn more</a>
             </div>
 
         </div>
@@ -155,9 +155,9 @@
                 <img src="images/blog4.jpg" alt="">
             </div>
             <div class="content">
-                <a href="#" class="title">tasty and refreshing coffee</a>
-                <span>by admin / 21st may, 2021</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <a href="#" class="title">Unique sitting arrangement</a>
+                <span>Comfortable in terms of sitting</span>
+                <p>Upright Sit – Traditional Library Chairs, Recline Sit – Lounge Library Chairs..</p>
                 <a href="#" class="btn">read more</a>
             </div>
         </div>
@@ -167,9 +167,9 @@
                 <img src="images/blog1.jpg" alt="">
             </div>
             <div class="content">
-                <a href="#" class="title">tasty and refreshing coffee</a>
-                <span>by admin / 21st may, 2021</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <a href="#" class="title">Separate aligned bookself</a>
+                <span>All kinds of books available</span>
+                <p>According to students different books are designed and arranged</p>
                 <a href="#" class="btn">read more</a>
             </div>
         </div>
@@ -179,9 +179,9 @@
                 <img src="images/blog2.jpg" alt="">
             </div>
             <div class="content">
-                <a href="#" class="title">tasty and refreshing coffee</a>
-                <span>by admin / 21st may, 2021</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <a href="#" class="title">lobbies for professional</a>
+                <span>Autonomous lobbies are originated </span>
+                <p>Those lobbies are fully sound proof, basically for professionals</p>
                 <a href="#" class="btn">read more</a>
             </div>
         </div>
@@ -244,14 +244,12 @@
             <a href="#home">home</a>
             <a href="#about">about</a>
             <a href="#menu">menu</a>
-            <a href="#products">products</a>
             <a href="#review">review</a>
             <a href="#contact">contact</a>
-            <a href="#branches">Our Branches</a>
         </div>
 
-        <div class="credit"><a href="#">Privacy Policy</a> &nbsp; | &nbsp; <a href="#">Terms of Use</a> &nbsp; | &nbsp; <a href="#">CA Supply Chain Act</a> &nbsp; | &nbsp; <a href="#">Cookie Preferences</a></div>
-        <div class="credit">created by <span>YK Cafe</span> | all rights reserved</div>
+        <div class="credit"><a href="#">Privacy Policy</a> &nbsp; | &nbsp; <a href="#">Terms of Use</a> &nbsp; | &nbsp; <a href="#">Act of Education for all</a> &nbsp; | &nbsp; <a href="#">Cookie Preferences</a></div>
+        <div class="credit">created by <span> Library Wings</span> | all rights reserved</div>
 
     </section>
 
