--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <img src="images/quote-img.png" alt="" class="quote">
                 <p>I was very pleased with the environment. Way to go library every evening. It really is extremely essential to my education. Thank you. </p>
                 <img src="images/pic1.jpg" class="user" alt="">
-                <h3>Kevin Patel</h3>
+                <h3>Aditya Rana</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -112,7 +112,7 @@
                 <img src="images/quote-img.png" alt="" class="quote">
                 <p>Incredible experience every time. I am more than grateful. It's always the first place I go when I need to study. Thank you Library Wings.</p>
                 <img src="images/pic2.jpg" class="user" alt="">
-                <h3>Mukti Peter</h3>
+                <h3>Bharat Pathak</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -126,7 +126,7 @@
                 <img src="images/quote-img.png" alt="" class="quote">
                 <p>The Library has several shining books like stars that's - helpful and knowledgeable, with a love for books and learning. thank you wings.</p>
                 <img src="images/pic3.jpg" class="user" alt="">
-                <h3>Karim Trivedi</h3>
+                <h3>Tanu Kumari</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
