--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#about">about</a>
-            <a href="#menu">menu</a>
             <a href="#review">review</a>
             <a href="#blogs">blogs</a>
-            <a href="#contact">contact</a>
-
+            <a href="#contact">contact</a>                
+            <a href="#signin">signin</a>
+            <a href="#login">login</a>
         </nav>
 
         <div class="icons">
             <div class="fas fa-search" id="search-btn"></div>
-            <div class="fas fa-shopping-cart" id="cart-btn"></div>
+            <div class="fas fa-book-open" id="cart-btn"></div>
             <div class="fas fa-bars" id="menu-btn"></div>
         </div>
 
@@ -45,6 +45,7 @@
             <input type="search" id="search-box" placeholder="search here...">
             <label for="search-box" class="fas fa-search"></label>
         </div>
+        
 
     </header>
 
@@ -202,6 +203,7 @@
 
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14682.798431877454!2d72.660678!3d23.071472!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe2395a616d254770!2sShreenath%20Heights!5e0!3m2!1sen!2sin!4v1651314494465!5m2!1sen!2sin"
+            
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
 
@@ -209,15 +211,15 @@
                 <h3>get in touch</h3>
                 <div class="inputBox">
                     <span class="fas fa-user"></span>
-                    <input type="text" placeholder="name">
+                    <input type="text" placeholder="enter your ame">
                 </div>
                 <div class="inputBox">
                     <span class="fas fa-envelope"></span>
-                    <input type="email" placeholder="email">
+                    <input type="email" placeholder="email id">
                 </div>
                 <div class="inputBox">
-                    <span class="fas fa-phone"></span>
-                    <input type="number" placeholder="number">
+                    <span class="fas fa-folder"></span>
+                    <input type="text" placeholder="write your quarry here">
                 </div>
                 <input type="submit" value="contact now" class="btn">
             </form>
@@ -225,7 +227,7 @@
         </div>
 
     </section> 
-
+    <!-- https://www.google.com/maps/place/AMBEDKAR+DSEU+Shakarpur+Campus+1/@28.6296681,77.2850539,17z/data=!3m1!4b1!4m6!3m5!1s0x390ce3554bfe13ff:0x42eb4f05b4caa699!8m2!3d28.6296681!4d77.2850539!16s%2Fg%2F1q5cchk6j -->
     <!-- contact section ends -->
 
     <!-- footer section starts  -->
