--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             <a href="#signin">signin</a>
             <a href="#login">login</a>
         </nav>
-
+        <nav><ul><li><a href="#signin">signin</a>
+            <a href="#login">login</a></li></ul>
+        </nav>
+<!-- 
         <div class="icons">
             <div class="fas fa-search" id="search-btn"></div>
             <div class="fas fa-book-open" id="cart-btn"></div>
@@ -45,7 +48,7 @@
             <input type="search" id="search-box" placeholder="search here...">
             <label for="search-box" class="fas fa-search"></label>
         </div>
-        
+         -->
 
     </header>
 
@@ -54,7 +57,7 @@
     <!-- home section starts  -->
 
     <section class="home" id="home">
-
+    
         <div class="content">
             <h3>Shine of every word for our future :)</h3>
             <p> With Library Wings..</p>
@@ -158,7 +161,7 @@
             <div class="content">
                 <a href="#" class="title">Unique sitting arrangement</a>
                 <span>Comfortable in terms of sitting</span>
-                <p>Upright Sit – Traditional Library Chairs, Recline Sit – Lounge Library Chairs..</p>
+                <p>Upright Sit-Traditional Library Chairs, Recline-Sit Lounge Library Chairs..</p>
                 <a href="#" class="btn">read more</a>
             </div>
         </div>
@@ -211,7 +214,7 @@
                 <h3>get in touch</h3>
                 <div class="inputBox">
                     <span class="fas fa-user"></span>
-                    <input type="text" placeholder="enter your ame">
+                    <input type="text" placeholder="enter your name">
                 </div>
                 <div class="inputBox">
                     <span class="fas fa-envelope"></span>
@@ -245,8 +248,8 @@
         <div class="links">
             <a href="#home">home</a>
             <a href="#about">about</a>
-            <a href="#menu">menu</a>
             <a href="#review">review</a>
+            <a href="#blogs">blogs</a>
             <a href="#contact">contact</a>
         </div>
 
