--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <a href="#" class="title">Unique sitting arrangement</a>
                 <span>Comfortable in terms of sitting</span>
                 <p>Upright Sit-Traditional Library Chairs, Recline-Sit Lounge Library Chairs..</p>
-                <a href="#" class="btn">read more</a>
+                <a href="#" class="btn">Sitting Arrangements</a>
             </div>
         </div>
 
@@ -171,10 +171,10 @@
                 <img src="images/blog1.jpg" alt="">
             </div>
             <div class="content">
-                <a href="#" class="title">Separate aligned bookself</a>
+                <a href="#" class="title">Separate aligned bookshelf</a>
                 <span>All kinds of books available</span>
                 <p>According to students different books are designed and arranged</p>
-                <a href="#" class="btn">read more</a>
+                <a href="#" class="btn">Bookshelf Arrangements</a>
             </div>
         </div>
 
@@ -186,7 +186,7 @@
                 <a href="#" class="title">lobbies for professional</a>
                 <span>Autonomous lobbies are originated </span>
                 <p>Those lobbies are fully sound proof, basically for professionals</p>
-                <a href="#" class="btn">read more</a>
+                <a href="#" class="btn">Loobies Arrangements</a>
             </div>
         </div>
 
@@ -196,7 +196,7 @@
 
 <!-- blogs section ends -->
 
-    <!-- contact section starts -->
+<!-- contact section starts -->
 
     <section class="contact" id="contact">
 
