added_signin Login

--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
             <a href="#about">about</a>
             <a href="#review">review</a>
             <a href="#blogs">blogs</a>
-            <a href="#contact">contact</a>                
-            <a href="#signin">signin</a>
-            <a href="#login">login</a>
+            <a href="#contact">contact</a>
         </nav>
-        <nav><ul><li><a href="#signin">signin</a>
-            <a href="#login">login</a></li></ul>
+    
+        <nav class="navbar_s">
+        <ul>
+             <li>
+                <a href="#signin">Signin</a>
+                <a href="#login">Login</a>
+            </li>
+        </ul>
         </nav>
 <!-- 
         <div class="icons">
