--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
 
         <a href="#" class="logo">
-            <img src="images/lib_logo.png" alt="">
+            <img src="images/lib_logo.png" alt="logo">
         </a>
 
         <nav class="navbar">
@@ -41,8 +41,15 @@
             </li>
         </ul>
         </nav>
+        <div>
+        <button class="nav-toggle-btn" aria-label="Toggle menu" data-nav-toggler>
+        <span class="line line-1"></span>
+        <span class="line line-2"></span>
+        <span class="line line-3"></span>
+        </button>
+        <a href="#" class="btn btn-outline">Wallet</a>
+    </div>
     </header>
-
     <!-- header section ends -->
 
     <!-- home section starts  -->
